fix underline that doesnt wrap -- among other text bubble things

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -7,6 +7,10 @@
 
 * { box-sizing: border-box; }
 
+body {
+  overflow: hidden;
+}
+
 body, 
 input, 
 button {
